fixed sidebar font size and wrapping #146

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -42,6 +42,7 @@
     color: var(--white);
     line-height: 1.7;
     font-weight: 700;
+    float: left;
   }
 
   .nav-link:hover {
